force-app/main/default/objects/Contact/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <description>Captures known allergies for the contact (e.g., penicillin, peanuts).</description>
    <inlineHelpText>Enter any known allergies for this contact.</inlineHelpText>
    <label>Allergies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>