force-app/main/default/objects/Contact/fields/Alternate_Emergency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Emergency_Phone__c</fullName>
    <description>Secondary or alternate emergency contact phone number for the contact.</description>
    <inlineHelpText>Enter alternate emergency contact phone number including country/area code.</inlineHelpText>
    <label>Alternate Emergency Phone</label>
    <type>Phone</type>
</CustomField>