force-app/main/default/objects/Contact/fields/Chronic_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Conditions__c</fullName>
    <description>Captures known chronic conditions for the contact (e.g., Diabetes, Asthma).</description>
    <inlineHelpText>Enter any chronic conditions for this contact.</inlineHelpText>
    <label>Chronic Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>