force-app/main/default/objects/Contact/fields/Current_Medications__c.field-meta.xml
<CustomField>
    <fullName>Current_Medications__c</fullName>
    <description>Captures current medications taken by the contact (e.g., Metformin 500mg, Albuterol).</description>
    <inlineHelpText>Enter current medications for this contact.</inlineHelpText>
    <label>Current Medications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>