force-app/main/default/objects/Contact/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <description>Primary emergency contact phone number for the contact.</description>
    <inlineHelpText>Enter emergency contact phone number including country/area code.</inlineHelpText>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>