force-app/main/default/objects/Contact/fields/Health_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Provider__c</fullName>
    <description>Name of the contact&apos;s health insurance provider (e.g., Star Health Insurance).</description>
    <inlineHelpText>Enter the contact&apos;s health insurance provider.</inlineHelpText>
    <label>Health Insurance Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>