force-app/main/default/objects/Contact/fields/Last_Health_Checkup_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Health_Checkup_Date__c</fullName>
    <description>Timestamp of the most recent health checkup for the contact.</description>
    <inlineHelpText>Enter the date of the contact&apos;s last health checkup (e.g., 10-Sep-2026).</inlineHelpText>
    <label>Last Health Checkup Date</label>
    <type>Date</type>
</CustomField>