force-app/main/default/objects/Contact/fields/Primary_Physician__c.field-meta.xml
<CustomField>
    <fullName>Primary_Physician__c</fullName>
    <description>Name and title of the contact&apos;s primary physician.</description>
    <inlineHelpText>Enter the name of the primary physician (e.g., Dr. Rajesh Sharma).</inlineHelpText>
    <label>Primary Physician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>